tests/parser/invalid/019-extra-opening-paren.man
def main()
    print(((2 + 2) - 5)
end
